[package]
name = "d3d9"
description = "Semi high-level wrappers around the Direct3D9 library."
documentation = "https://docs.rs/d3d9"
repository = "https://github.com/jackkdev/d3d9-rs.git"
readme = "../README.md"
license-file = "../LICENSE.md"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.14.0"
d3dx9-sys = { path = "../d3dx9-sys" }

[dependencies.winapi]
version = "0.3.9"
features = ["d3d9", "d3d9types", "d3d9caps", "minwindef", "unknwnbase", "winnt", "winbase", "windef"]
